Added structure to sass, added sass code, and added some HTML tags and text.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,9 +2,60 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>one page</title>
+    <title>Knut's portefolio</title>
   </head>
   <body>
-    <h1>This is ya boy, one page.</h1>
+    <!--See README.md for more information about this page. -->
+    <div class="section1 container">
+      <!-- Make a jumbotron with a header and a few social media icons. -->
+      <h1>Knut O. Skaret</h1>
+      <p>Love's to create</p>
+      <ul>
+        <li class="btn"><a href="https://twitter.com/TyfonKnut">twitter</a></li>
+        <li class="btn"><a href="https://www.linkedin.com/in/knut-olav-skaret-9679b238/">linkedIn</a></li>
+        <li class="btn"><a href="https://github.com/KOSkaret">GitHub</a></li>
+      </ul>
+
+    </div>
+
+    <div class="section2 container">
+      <!-- Introduction about me an my interest -->
+      <h2>About me</h2>
+      <p>I am an individual that likes to learn and work with new things.
+      The things I enjoy learning about, is programming and general IT solutions.
+      Thanks to my background as an ICT-consultant and interest in programming,
+      so am I learning many new things.</p>
+    </div>
+
+    <div class="section3 container">
+      <!-- My portefolio of projects I have done, maybe include a reference to
+      my projects as url. -->
+      <ul>
+        <li>
+          <span class="card">
+            <a href="">
+              <img src="" alt="">
+              <p>Project1</p>
+            </a>
+          </span>
+        </li>
+        <li>
+          <span class="card">
+            <a href="">
+              <img src="" alt="">
+              <p>Project2</p>
+            </a>
+          </span>
+        </li>
+        <li>
+          <span class="card">
+            <a href="">
+              <img src="" alt="">
+              <p>Project3</p>
+            </a>
+          </span>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
