Experimented on flexbox, tried to make the first section cover majority of the screen when opened, and experimented with other stuff.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -36,31 +36,31 @@
         my projects as url. -->
         <ul>
           <li>
-            <span class="card">
+            <div class="card">
               <a href="">
                 <h3>Project 1</h3>
                 <img src="../img/project1.jpg" alt="">
                 <p>This is a text description about my project. Why I made it, what I made it of.</p>
               </a>
-            </span>
+            </div>
           </li>
           <li>
-            <span class="card">
+            <div class="card">
               <a href="">
                 <h3>Project 2</h3>
                 <img src="../img/project2.jpg" alt="">
                 <p>This is a text description about my project. Why I made it, what I made it of.</p>
               </a>
-            </span>
+            </div>
           </li>
           <li>
-            <span class="card">
+            <div class="card">
               <a href="">
                 <h3>Project 3</h3>
                 <img src="../img/project3.jpg" alt="">
                 <p>This is a text description about my project. Why I made it, what I made it of.</p>
               </a>
-            </span>
+            </div>
           </li>
         </ul>
       </div>
