--- a/index.html
+++ b/index.html
@@ -1,69 +1,73 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Knut's portefolio</title>
-  </head>
-  <body>
-    <!--See README.md for more information about this page. -->
-    <div id="section1">
-      <div class="container">
-        <!-- Make a jumbotron with a header and a few social media icons. -->
-        <h1>Knut O. Skaret</h1>
-        <p>Love's to create</p>
-        <ul>
-          <li class="btn"><a href="https://twitter.com/TyfonKnut">Twitter</a></li>
-          <li class="btn"><a href="https://www.linkedin.com/in/knut-olav-skaret-9679b238/">linkedIn</a></li>
-          <li class="btn"><a href="https://github.com/KOSkaret">GitHub</a></li>
-        </ul>
-      </div>
-    </div>
 
-    <div id="section2">
-      <div class="container">
-        <!-- Introduction about me an my interest -->
-        <h2>About me</h2>
-        <p>I am an individual that likes to learn and work with new things.
-        The things I enjoy learning about, is programming and general IT solutions.
-        Thanks to my background as an ICT-consultant and interest in programming,
-        so am I learning many new things.</p>
-      </div>
-    </div>
+<head>
+  <meta charset="utf-8">
+  <title>Knut's portefolio</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
+  <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+</head>
 
-    <div id="section3">
-      <div class="container">
-        <!-- My portefolio of projects I have done, maybe include a reference to
+<body>
+  <!--See README.md for more information about this page. -->
+  <div id="section1">
+    <div class="container">
+      <!-- Make a jumbotron with a header and a few social media icons. -->
+      <h1>Knut O. Skaret</h1>
+      <p>Love's to create</p>
+      <ul>
+        <li class="btn social-btn"><a href="https://twitter.com/TyfonKnut"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        <li class="btn social-btn">
+          <a href="https://www.linkedin.com/in/knut-olav-skaret-9679b238/">
+            <i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+        <li class="btn social-btn"><a href="https://github.com/KOSkaret"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div id="section2">
+    <div class="container">
+      <!-- Introduction about me an my interest -->
+      <h2>About me</h2>
+      <p>I am an individual that likes to learn and work with new things. The things I enjoy learning about, is programming and general IT solutions. Thanks to my background as an ICT-consultant and interest in programming, so am I learning many new things.</p>
+    </div>
+  </div>
+
+  <div id="section3">
+    <div class="container">
+      <!-- My portefolio of projects I have done, maybe include a reference to
         my projects as url. -->
-        <ul>
-          <li>
-            <div class="card">
-              <a href="">
-                <h3>Project 1</h3>
-                <img src="../img/project1.jpg" alt="">
-                <p>This is a text description about my project. Why I made it, what I made it of.</p>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div class="card">
-              <a href="">
-                <h3>Project 2</h3>
-                <img src="../img/project2.jpg" alt="">
-                <p>This is a text description about my project. Why I made it, what I made it of.</p>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div class="card">
-              <a href="">
-                <h3>Project 3</h3>
-                <img src="../img/project3.jpg" alt="">
-                <p>This is a text description about my project. Why I made it, what I made it of.</p>
-              </a>
-            </div>
-          </li>
-        </ul>
-      </div>
+      <ul>
+        <li>
+          <div class="card">
+            <a href="">
+              <h3>Project 1</h3>
+              <img src="./img/project1.jpg" alt="">
+              <p>This is a text description about my project. Why I made it, what I made it of.</p>
+            </a>
+          </div>
+        </li>
+        <li>
+          <div class="card">
+            <a href="">
+              <h3>Project 2</h3>
+              <img src="./img/project2.jpg" alt="">
+              <p>This is a text description about my project. Why I made it, what I made it of.</p>
+            </a>
+          </div>
+        </li>
+        <li>
+          <div class="card">
+            <a href="">
+              <h3>Project 3</h3>
+              <img src="./img/project3.jpg" alt="">
+              <p>This is a text description about my project. Why I made it, what I made it of.</p>
+            </a>
+          </div>
+        </li>
+      </ul>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
