Done more experimentation with flexbox, colorscheme and other.

--- a/index.html
+++ b/index.html
@@ -4,23 +4,35 @@
 <head>
   <meta charset="utf-8">
   <title>Knut's portefolio</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./css/main.css">
   <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 </head>
 
 <body>
+  <nav>
+    <div class="navigation">
+      <div class="navbrand"><h1>Knut O. Skaret</h1></div>
+      <div class="navmenu">
+      <ul>
+        <li><a href="#section1">Start</a></li>
+        <li><a href="#section2">About</a></li>
+        <li><a href="#section3">Portefolio</a></li>
+      </ul>
+      </div>
+    </div>
+  </nav>
   <!--See README.md for more information about this page. -->
   <div id="section1">
     <div class="container">
       <!-- Make a jumbotron with a header and a few social media icons. -->
-      <h1>Knut O. Skaret</h1>
-      <p>Love's to create</p>
+      <p>Ambition to create</p>
       <ul>
-        <li class="btn social-btn"><a href="https://twitter.com/TyfonKnut"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-        <li class="btn social-btn">
+        <li class="btn"><a href="https://twitter.com/TyfonKnut"><i class="fa fa-twitter" aria-hidden="true"></i>@TyfonKnut</a></li>
+        <li class="btn">
           <a href="https://www.linkedin.com/in/knut-olav-skaret-9679b238/">
-            <i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-        <li class="btn social-btn"><a href="https://github.com/KOSkaret"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+            <i class="fa fa-linkedin" aria-hidden="true"></i>Knut Olav Skaret</a></li>
+        <li class="btn social-btn"><a href="https://github.com/KOSkaret"><i class="fa fa-github" aria-hidden="true"></i>KOSkaret</a></li>
       </ul>
     </div>
   </div>
@@ -43,7 +55,8 @@
             <a href="">
               <h3>Project 1</h3>
               <img src="./img/project1.jpg" alt="">
-              <p>This is a text description about my project. Why I made it, what I made it of.</p>
+              <p>This is a text description about my project. Why I made it, what I made it of.
+              </br>Test</p>
             </a>
           </div>
         </li>
@@ -68,6 +81,12 @@
       </ul>
     </div>
   </div>
+  <footer>
+    <p>this is my footer.</p>
+  </footer>
+  <script src="./js/index.js">
+
+  </script>
 </body>
 
 </html>
