Added a crude side-menu including som added some media queries and experimenting with them.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <form class="forms" action="index.html" method="post">
           <input type="email" name="email" placeholder="Write your mail here.">
           <textarea name="content" rows="5" placeholder="Write your message here."></textarea>
-          <input class="btn" type="submit">
+          <input class="btn" type="submit" value="Submit">
         </form>
       </div>
     </div>
