Fixed border on submit button, made the navigation follow the top window, changed id from contentid to start.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </span>
       <span class="navbar-nav">
         <ul>
-          <li><a href="#navbar">Start</a></li>
+          <li><a href="#start">Start</a></li>
           <li><a href="#aboutMe">About</a></li>
           <li><a href="#projects">Portefolio</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -28,14 +28,14 @@
   <div id="side-menu" class="side-nav">
     <ul onclick="closeSlideMenu()">
       <li><a href="#" class="btn-close">&times;</a></li>
-      <li><a href="#navbar">Start</a></li>
+      <li><a href="#start">Start</a></li>
       <li><a href="#aboutMe">About</a></li>
       <li><a href="#projects">Portefolio</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </div>
   <!--See README.md for more information about this page. -->
-  <div class="content" id='contentid'>
+  <div class="content" id='start'>
     <div id="jumbotron">
       <div class="jumbotron-bg">
         <!-- Make a jumbotron with a header and a few social media icons. -->
@@ -114,12 +114,6 @@
   </div>
   <footer>
     <div class="footer">
-      <ul>
-        <li><a href="#navbar">Start</a></li>
-        <li><a href="#aboutMe">About</a></li>
-        <li><a href="#projects">Portefolio</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
     </div>
   </footer>
   <script src="./js/index.js">
