--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
       <div class="container">
         <!-- Introduction about me an my interest -->
         <h2>About me</h2>
-        <p>This is just a description about me.</p>
+        <p>I am an individual whose interest are spanning over multiple places. The things I take interest in range from computer to carpenting.
+        Love to be creative and try new things.</p>
       </div>
     </div>
 
@@ -64,41 +65,36 @@
       <div class="container">
         <!-- My portefolio of projects I have done, maybe include a reference to
         my projects as url. -->
-
-            <div class="card">
-                <h3>Project 1</h3>
-                <img src="./img/project1.jpg" alt="">
-                <p>This is a text description about my project. Why I made it, what I made it of.
-                  </br>Test</p>
-                  <div class="btn">
-                    Read more
-                  </div>
+        <ul>
+          <li class="card-item">
+            <div class="card-content">
+              <h3>Project 1</h3>
+              <img src="./img/project1.jpg" alt="">
+              <p>This is a text description about my project. Why I made it, what I made it of.
+                Test, and test and test and test and test.</p>
             </div>
-            <div class="card">
-                <h3>Project 2</h3>
-                <img src="./img/project2.jpg" alt="">
-                <p>This is a text description about my project. Why I made it, what I made it of.</p>
-                <div class="btn">
-                  Read more
-                </div>
+          </li>
+          <li class="card-item">
+            <div class="card-content">
+              <h3>Project 2</h3>
+              <img src="./img/project2.jpg" alt="">
+              <p>This is a text description about my project. Why I made it, what I made it of.</p>
             </div>
-            <div class="card highlight">
-
-                <h3>Project 3</h3>
-                <img src="./img/project3.jpg" alt="">
-                <p>This is a text description about my project. Why I made it, what I made it of.</p>
-                <div class="btn">
-                  Read more
-                </div>
+          </li>
+          <li class="card-item">
+            <div class="card-content">
+              <h3>Project 3</h3>
+              <img src="./img/project3.jpg" alt="">
+              <p>This is a text description about my project. Why I made it, what I made it of.</p>
             </div>
-            <div class="card">
-                <h3>Project 4</h3>
-                <img src="./img/project3.jpg" alt="">
-                <p>This is a text description about my project. Why I made it, what I made it of.</p>
-                <div class="btn">
-                  Read more
-                </div>
-            </div>
+          </li>
+          <li class="card-item">
+            <div class="card-content">
+              <h3>Project 4</h3>
+              <img src="./img/project3.jpg" alt="">
+              <p>This is a text description about my project. Why I made it, what I made it of.</p></div>
+          </li>
+        </ul>
       </div>
     </div>
 
