Added wiki viewer, fixed the anchor tag css.

--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
         <ul>
           <li class="card-item">
             <div class="card-content">
-              <h3>Project 1</h3>
-              <img src="./img/project.jpg" alt="">
-              <p>This is a text description about my project. Why I made it, what I made it of.
-                Test, and test and test and test and test.</p>
+              <h3>Wikiviewer</h3>
+              <img src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1372736.MvvxWR.small.a5ef608b-6b04-42d2-84f8-85e85b8edaf7.png" alt="An image of the web page.">
+              <p>On this page, I had as a task to make a web page whose purpose is to fetch search results from wikipedia and display the different articles on the page.
+                And if you open a link, you will be taken to the wikipedia page.
+              </p>
+              <p> <a href="https://codepen.io/tyfonknut/pen/MvvxWR" target="_blank"> You can test the page here.</a></p>
+              <p><a href="https://github.com/KOSkaret/wikiViewer" target="_blank">Or see the github repository here.</a></p>
             </div>
           </li>
           <li class="card-item">
